# k100s

./: README.md  index.html  package.json  vite.config.js
.github/workflows/: release.yml
Casks/: k100s.rb
electron/: main.js  preload.cjs
scripts/: demo-cluster.sh  release-version.mjs  update-homebrew-cask.mjs
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
