[package]
name = "k100s"
version = "0.1.0"
description = "A Kubernetes desktop browser for clusters, namespaces, and pods."
authors = ["k100s"]
edition = "2021"

[lib]
name = "k100s_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
